--- a/src/devtools/debug/ui/status_widget_base.ui
+++ b/src/devtools/debug/ui/status_widget_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>102</height>
+    <height>129</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -39,8 +39,27 @@
     <layout class="QHBoxLayout" name="header_layout">
      <item>
       <widget class="QLabel" name="header_label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>&lt;h3&gt;Debug&lt;/h3&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="help_button">
+       <property name="toolTip">
+        <string>User Guide</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -51,6 +70,9 @@
        </property>
        <property name="text">
         <string/>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
